# libsimple-tacacct

./: ChangeLog  Makefile.am  Makefile.in  README  acct_test.c  send_tacacs_acct.3  simple_tacacct.c
debian/: changelog  control  copyright  libsimple-tacacct-dev.install  libsimple-tacacct.manpages  libsimple-tacacct1.install  rules
tacplus/: simple_tacacct.h
